Mon Sep 10 11:42:58 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gutf8.c glib/gstring.c glib/gfileutils.c glib/gmain.c: 
	Doc fixes.

Sat Sep  8 17:14:51 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gfileutils.[ch]: Add g_build_path(), 
	g_build_filename(), to create separated paths, 
	suppressing duplicate separators, from varargs
	lists.

	* tests/strfunc-test.c: Add tests for g_build_path(),
	g_build_filename().

Sat Sep  8 14:11:53 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/Makefile.am (libglib_1_3_la_SOURCES): Add
	gbsearcharray.[ch].

	* glib/glib-object.h: Remove include of gbsearcharray. 

Mon Sep  3 23:29:51 2001  Owen Taylor  <otaylor@redhat.com>

	* Version 1.3.7

	* Makefile.am (EXTRA_DIST): Distribute po/po2tbl.sed.in

	* Makefile.am: Remove references to glib.rc[.in]

	* NEWS: Various additions.

2001-09-04  Tor Lillqvist  <tml@iki.fi>

	* README.win32: Update. Don't mention pthreads.

	* build-dll: Remove, moved to the build module.

	* glibconfig.h.win32.in: Don't mention pthreds here, either.

	* glib/gstrfuncs.c: Mark the correct variable for export from DLL.

	* glib/giowin32.c (g_io_win32_msg_create_watch): Owen forgot to
	rename the win32_watch_funcs variable here, too.

	* */makefile.mingw.in: Don't use version number in import library
	name. Use whole version number in DLL name. Use build-dll from the
	build module.

Tue Sep  4 01:50:24 2001  Tim Janik  <timj@gtk.org>

	* NEWS: updates for 1.3.7 release.

Mon Aug 27 14:56:12 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.h: Add closure_marshal/closure_callback
	fields to GSourceFuncs for use by g_source_set_closure().

	* glib/gmain.c glib/giounix.c glib/giowin32.c 
	  glib/gmain.h: Export the SourceFuncs vtables so GObject
	can use them to figure out closure callbacks/marshallers
	for the default source types.

Sun Sep  2 13:05:53 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gstrfuncs.c (g_strchomp): Replace some uses
	of isspace() with g_ascii_isspace().
